--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,4 +1,4 @@
-deploy.ant.properties.file=C:\\Users\\DFABD\\AppData\\Roaming\\NetBeans\\8.2\\tomcat90.properties
-j2ee.server.home=C:/Users/DFABD/Desktop/apache-tomcat-9.0.111-windows-x64/apache-tomcat-9.0.111
-j2ee.server.instance=tomcat90:home=C:\\Users\\DFABD\\Desktop\\apache-tomcat-9.0.111-windows-x64\\apache-tomcat-9.0.111
-user.properties.file=C:\\Users\\DFABD\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
+deploy.ant.properties.file=C:\\Users\\mauri\\AppData\\Roaming\\NetBeans\\8.2\\tomcat90.properties
+j2ee.server.home=C:/Users/mauri/Downloads/apache-tomcat-9.0.111-windows-x64/apache-tomcat-9.0.111
+j2ee.server.instance=tomcat90:home=C:\\Users\\mauri\\Downloads\\apache-tomcat-9.0.111-windows-x64\\apache-tomcat-9.0.111
+user.properties.file=C:\\Users\\mauri\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
